<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/mode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_night_mode"
                android:text="@string/save_button"
                app:backgroundTint="@color/buttonColor" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_save"
                android:text="@string/save_button"
                android:layout_alignParentEnd="true"
                app:backgroundTint="@color/buttonColor" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:padding="5sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="bottom"
                    android:text="Prime numbers calculator"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:padding="5sp">

                <EditText
                    android:id="@+id/number1"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="from"
                    android:inputType="number"
                    android:maxLength="9"
                    android:textColorHint="@color/hintColor"
                    android:outlineAmbientShadowColor="@color/hintColor"
                    android:outlineSpotShadowColor="@color/hintColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="--"
                    android:textSize="24dp" />

                <EditText
                    android:id="@+id/number2"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="to"
                    android:inputType="number"
                    android:maxLength="9"
                    android:textColorHint="@color/hintColor"/>
            </LinearLayout>


            <Button
                android:id="@+id/calculate_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_theme"
                android:text="@string/calculate_button" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:paddingTop="25sp"
                android:text="@string/prime_numbers"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/prime_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom|center"
                android:gravity="bottom|center">

                <ImageView
                    android:id="@+id/logo_small"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/logo_calc_512px" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>