<resources>
    <string name="app_name">Couchbase Prime</string>
    <string name="calculate_button">Calculate</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="prime_numbers">Amount of prime numbers</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>